@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-13T16:11:35Z",
+  "timestamp" : "2023-10-14T00:41:03Z",
   "count_outdated" : 1779,
   "uniques_outdated" : 611,
-  "count" : 1842,
-  "uniques" : 631,
+  "count" : 1843,
+  "uniques" : 632,
   "views" : [
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2023-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
