@@ -1,6 +1,6 @@
 {
-  "count": 63,
-  "uniques": 20,
+  "count": 64,
+  "uniques": 21,
   "views": [
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2023-10-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
