@@ -1,3 +1,12 @@
+2023-10-14T00:41:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6514442607 # 1984
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
+* notice: last 14d: unq all: 21 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 611 1779 / 631 1842
+* notice: next accum: outdated-unq outdated-all / unq all: 611 1779 / 632 1843
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-10-13]
+
 2023-10-13T16:11:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6510549958 # 1983
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
